crates/svelte-ratatui-adapter/tests/snapshots/snapshot_tests__snapshot_event_ctrl_s.snap
---
source: crates/svelte-ratatui-adapter/tests/snapshot_tests.rs
expression: js.unwrap()
---
(function(){
    const target = document.activeElement || document.body;
    const init = {
        key: 's',
        code: 'KeyS',
        shiftKey: false,
        ctrlKey: true,
        altKey: false,
        metaKey: false,
        bubbles: true,
        cancelable: true
    };
    target.dispatchEvent(new KeyboardEvent('keydown', init));
    target.dispatchEvent(new KeyboardEvent('keyup', init));
})()
