crates/svelte-ratatui-adapter/tests/snapshots/snapshot_tests__snapshot_event_escape_key.snap
---
source: crates/svelte-ratatui-adapter/tests/snapshot_tests.rs
expression: js.unwrap()
---
(function(){
    const target = document.activeElement || document.body;
    target.dispatchEvent(new KeyboardEvent('keydown', {
        key: 'Escape',
        code: 'Escape',
        shiftKey: false,
        ctrlKey: false,
        altKey: false,
        metaKey: false,
        bubbles: true,
        cancelable: true
    }));
})()
