crates/svelte-ratatui-adapter/tests/snapshots/snapshot_tests__snapshot_event_mouse_click.snap
---
source: crates/svelte-ratatui-adapter/tests/snapshot_tests.rs
expression: js.unwrap()
---
(function(){
    const el = document.elementFromPoint(80, 80);
    if (el) {
        el.click();
        el.focus();
    }
})()
