crates/svelte-ratatui-adapter/tests/snapshots/snapshot_tests__snapshot_event_mouse_right_down.snap
---
source: crates/svelte-ratatui-adapter/tests/snapshot_tests.rs
expression: js.unwrap()
---
(function(){
    const el = document.elementFromPoint(32, 32);
    if (el) {
        el.dispatchEvent(new MouseEvent('mousedown', {
            clientX: 32,
            clientY: 32,
            button: 2,
            buttons: 2,
            bubbles: true,
            cancelable: true
        }));
        el.focus();
    }
})()
