crates/svelte-ratatui-adapter/tests/snapshots/snapshot_tests__snapshot_event_mouse_up.snap
---
source: crates/svelte-ratatui-adapter/tests/snapshot_tests.rs
expression: js.unwrap()
---
(function(){
    const el = document.elementFromPoint(80, 80);
    if (el) {
        el.dispatchEvent(new MouseEvent('mouseup', {
            clientX: 80,
            clientY: 80,
            button: 0,
            bubbles: true,
            cancelable: true
        }));
        el.dispatchEvent(new MouseEvent('click', {
            clientX: 80,
            clientY: 80,
            button: 0,
            bubbles: true,
            cancelable: true
        }));
    }
})()
